--- a/java-agent/agent/pom.xml
+++ b/java-agent/agent/pom.xml
@@ -56,6 +56,18 @@
         <version>9.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+
+    <dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+    <version>4.9.3</version>
+</dependency>
+
   </dependencies>
 
   <!-- <build>
@@ -103,9 +115,6 @@
             <version>3.2.2</version>
             <configuration>
                 <archive>
-                    <manifest>
-                        <mainClass>com.mycompany.app.App</mainClass>
-                    </manifest>
                     <manifestEntries>
                         <Premain-Class>com.mycompany.app.Agent</Premain-Class>
                         <Can-Redefine-Classes>true</Can-Redefine-Classes>
